# Comfyui_PDuse

./: .cursorrules  PDMaskSelection.py  PDimage.py  README.md  __init__.py  config.py  fix_name.py  groupcolor.py  image composite.py  image.py  json_groupfontsize.py  jsonbach.py  pyproject.toml  requirements.txt  txtjson.py
.obsidian/: workspace.json
fonts/: Alibaba-PuHuiTi-Bold.ttf.json  Caveat-VariableFont_wght.ttf.json
input/: TL_RF_毛绒风格(建筑inpaint)_V2.json
output/json/: RF_毛绒风格(建筑inpaint)_V2.json_1.json
py/: File.py  IMAGESAVE_PATH_v1.py  PDFile_Name_Fix_v1.py  PDJSON_incrementalnumber.py  PD_Image_Rotate_v1.py  PDimage.py  RemoveColorWords.py  XYZ.py  __init__.py  custom_image_processor.py  image_ratio_V1.py  image_resize_v1.py  image_text_V1.py  imagebach.py  imageblend_v1.py  imageconcante_V1.py  json_groupfontsize.py  jsonbach.py  mask.py  node_lora.py  simple_test_node.py  text.py  txt.py
workflow/: PDIMAGE-批量重命名.json  PD_ImageMergerWithText.json  PD_节点汇总 (1).json  PD_节点汇总.json  TL_TLPD_节点汇总 (1).json  批量反推工具V8.1.json  批量反推工具V8.json  批量反推工具V8_qwen2.5xl.json  批量反推工具V9.json
