[project]
name = "comfyui_pduse"
description = "An extension for ComfyUI that allows hot reloading. Once installed, you can preview changes in real-time while developing custom nodes or installing plugins without restarting ComfyUI."
version = "1.0.1"
dependencies = ["xlrd"]

[project.urls]
Repository = "https://github.com/7BEII/Comfyui_PDuse"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "7BEII" 
DisplayName = "Comfyui_PDuse"
Icon = ""